Swagger + HTMX
